--- a/style.css
+++ b/style.css
@@ -10,10 +10,11 @@ table {
 td{
     text-align: center;
     border: 1px solid black;
-    width: 30px;
-    height: 30px;
+    width: 50px;
+    height: 50px;
     cursor: pointer;
     margin: 10px 0;
+    font-size: 40px;
 }
 
 .endLineDiv {
@@ -23,4 +24,7 @@ td{
 .field {
     float: left;
     margin: 0 auto;
+}
+td:hover {
+    background-color: darkgrey;
 }
