--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 * {
     margin: 0;
     padding: 0;
+    font-size: 10px;
 }
 
 table {
@@ -13,7 +14,6 @@ td{
     width: 50px;
     height: 50px;
     cursor: pointer;
-    margin: 10px 0;
     font-size: 40px;
 }
 
